[gd_scene load_steps=4 format=3 uid="uid://vdhbx85hhp2n"]

[ext_resource type="Script" uid="uid://uwom046hgnkv" path="res://cutscene/cutscene.gd" id="1_d3cms"]
[ext_resource type="Texture2D" uid="uid://c6jk85gmu0707" path="res://cutscene/assets/yarn.png" id="2_xp3h3"]
[ext_resource type="Texture2D" uid="uid://buyyr43j3xmrb" path="res://cutscene/assets/textbox.png" id="3_xp3h3"]

[node name="Cutscene" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_d3cms")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
texture = ExtResource("2_xp3h3")

[node name="TextureRect2" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="TextureRect3" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="TextBox" type="Control" parent="."]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="TextureRect4" type="TextureRect" parent="TextBox"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = 331.0
offset_top = 674.0
offset_right = 1549.0
offset_bottom = 960.0
grow_horizontal = 2
grow_vertical = 0
texture = ExtResource("3_xp3h3")

[node name="Speaker" type="Label" parent="TextBox"]
layout_mode = 0
offset_left = 431.0
offset_top = 723.0
offset_right = 732.0
offset_bottom = 789.0
theme_type_variation = &"HeaderSmall"
theme_override_colors/font_color = Color(0.68235296, 0.27450982, 0.15294118, 1)
theme_override_font_sizes/font_size = 32
text = "Maple"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Text" type="Label" parent="TextBox"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = 390.0
offset_top = 752.0
offset_right = 1489.0
offset_bottom = 926.0
grow_horizontal = 2
grow_vertical = 0
theme_override_colors/font_color = Color(0.68235296, 0.27450982, 0.15294118, 1)
theme_override_font_sizes/font_size = 24
text = "TEST"
